# clapbasics

./: Cargo.toml  README.md  cp.sample2.txt
src/: lib.rs  main.rs
tests/: cli.rs
